--- a/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
@@ -1,29 +1,13 @@
 <div class="rte-breadcrumb-item">
   @if (isLast()) {
     @if (isEllipsisActive()) {
-      <div
-        [rteTooltip]="item()!.label"
-        [rteTooltipPosition]="'bottom'"
-        [style]="tooltipTriggerStyle()"
-      >
-        <a
-          role="link"
-          aria-current="page"
-          tabindex="-1"
-          [attr.aria-label]="item()!.label"
-          [style]="linkStyle()"
-        >
+      <div [rteTooltip]="item()!.label" [rteTooltipPosition]="'bottom'" [style]="tooltipTriggerStyle()">
+        <a role="link" aria-current="page" tabindex="-1" [attr.aria-label]="item()!.label" [style]="linkStyle()">
           {{ item()!.label }}
         </a>
       </div>
     } @else {
-      <a
-        role="link"
-        aria-current="page"
-        tabindex="0"
-        [attr.aria-label]="item()!.label"
-        [style]="linkStyle()"
-      >
+      <a role="link" aria-current="page" tabindex="0" [attr.aria-label]="item()!.label" [style]="linkStyle()">
         {{ item()!.label }}
       </a>
     }
@@ -36,20 +20,10 @@
         [style.overflow]="'unset'"
         [rteTooltipShouldFocusTrigger]="false"
       >
-        <rte-link
-          [href]="item()!.link"
-          [label]="item()!.label"
-          [subtle]="true"
-          [maxWidth]="breadcrumbItemMaxWidth()"
-        />
+        <rte-link [href]="item()!.link" [label]="item()!.label" [subtle]="true" [maxWidth]="breadcrumbItemMaxWidth()" />
       </div>
     } @else {
-      <rte-link
-        [href]="item()!.link"
-        [label]="item()!.label"
-        [subtle]="true"
-        [maxWidth]="breadcrumbItemMaxWidth()"
-      />
+      <rte-link [href]="item()!.link" [label]="item()!.label" [subtle]="true" [maxWidth]="breadcrumbItemMaxWidth()" />
     }
   }
 </div>
