--- a/packages/angular/projects/ds-rte-lib/src/lib/components/modal/modal.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/modal/modal.component.html
@@ -5,20 +5,13 @@
     class="rte-modal-container"
     [attr.aria-modal]="true"
     [attr.aria-labelledby]="id() + '-modal-title'"
-    [attr.aria-describedby]="
-      description() ? id() + '-modal-desc' : ariaDescribedby()
-    "
+    [attr.aria-describedby]="description() ? id() + '-modal-desc' : ariaDescribedby()"
     [attr.data-size]="size()"
     [attr.data-open]="isOpen()"
   >
     <div class="rte-modal-header">
       <div class="rte-modal-header-text">
-        <rte-icon
-          *ngIf="icon()"
-          [name]="icon() ?? ''"
-          [size]="iconSize()"
-          [appearance]="iconAppearance()"
-        />
+        <rte-icon *ngIf="icon()" [name]="icon() ?? ''" [size]="iconSize()" [appearance]="iconAppearance()" />
         <h2 class="rte-modal-title" [id]="id() + '-modal-title'">
           {{ title() }}
         </h2>
