--- a/packages/angular/projects/ds-rte-lib/src/lib/components/toast/toast.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/toast/toast.component.html
@@ -6,31 +6,16 @@
 >
   <div class="rte-toast-content">
     @if (displayLeftIcon()) {
-      <rte-icon
-        class="rte-toast-icon"
-        aria-hidden="true"
-        [name]="defaultIconName()"
-        [size]="iconSize"
-      />
+      <rte-icon class="rte-toast-icon" aria-hidden="true" [name]="defaultIconName()" [size]="iconSize" />
     } @else {
       @if (displayCustomIcon()) {
-        <rte-icon
-          class="rte-toast-icon"
-          aria-hidden="true"
-          [name]="iconName()!"
-          [size]="iconSize"
-        />
+        <rte-icon class="rte-toast-icon" aria-hidden="true" [name]="iconName()!" [size]="iconSize" />
       }
     }
     <span class="rte-toast-message">{{ message() }}</span>
   </div>
   @if (displayActionButton()) {
-    <button
-      rteButton
-      rteButtonVariant="text"
-      class="rte-toast-action-button"
-      (click)="onClickActionButton()"
-    >
+    <button rteButton rteButtonVariant="text" class="rte-toast-action-button" (click)="onClickActionButton()">
       {{ actionButtonLabel() }}
     </button>
   }
