fix: improve prettier integration

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
@@ -42,7 +42,7 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
       />
@@ -52,7 +52,7 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
       />
