feat(core): use parameter object for shouldDisplayBadge utils

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
@@ -33,11 +33,10 @@
           *ngIf="shouldDisplayBadge(option)"
           [count]="option.badgeCount"
           [badgeContent]="option.badgeContent!"
-          [icon]="option.badgeIcon"
+          [icon]="option.badgeIcon!"
           [badgeType]="option.badgeType!"
           [simpleBadge]="true"
         ></rte-badge>
-        >>>>>>> 3210feae (feat(segmented control): add badge)
       </div>
     </div>
   </ng-container>
