fix(modal): increase border radius for size L and XL

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/modal/modal.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/modal/modal.component.scss
@@ -49,10 +49,12 @@
 
   &[data-size='l'] {
     width: 1168px;
+    border-radius: $radius-l;
   }
 
   &[data-size='xl'] {
     width: 1328px;
+    border-radius: $radius-xl;
   }
 
   .rte-modal-header {
