feat(core): change global architecture for design tokens

--- a/packages/core/components/grid/grid.scss
+++ b/packages/core/components/grid/grid.scss
@@ -1,5 +1,5 @@
-@use '../../design-tokens/tokens/_spacing.scss' as *;
-@use '../../design-tokens/tokens/_layout.scss' as *;
+@use '../../design-tokens/tokens/public/spacing' as *;
+@use '../../design-tokens/tokens/public/layout' as *;
 
 $grid-max-width-narrow: 864px;
 $grid-max-width-wide: 1296px;
