--- a/packages/core/design-tokens/main-internal.scss
+++ b/packages/core/design-tokens/main-internal.scss
@@ -1,5 +1,2 @@
 @forward "main";
-@forward "tokens/gradient";
-@forward 'primitives/colors';
-@forward 'tokens/zindex';
-@forward 'tokens/shadows';
+@forward "tokens/private";
