--- a/packages/core/design-tokens/main.scss
+++ b/packages/core/design-tokens/main.scss
@@ -1,8 +1,2 @@
-@forward "tokens/border";
-@forward "tokens/spacing";
-@forward "tokens/typography";
-@forward "tokens/layout";
-@forward "tokens/opacity";
-@forward "tokens/mixins";
-@forward "tokens/themes";
-@forward "tokens/elevation";
+@forward "tokens";
+@forward "abstract";
