--- a/packages/core/design-tokens/tokens/public/themes/base/_vert-foret-dark.scss
+++ b/packages/core/design-tokens/tokens/public/themes/base/_vert-foret-dark.scss
@@ -1,7 +1,7 @@
-@use '../../primitives/colors' as *;
-@use '../../primitives/devColors' as *;
+@use '../../../../primitives/colors' as *;
+@use '../../../../primitives/devColors' as *;
 
-$bleu-iceberg-dark: (
+$vert-foret-dark: (
   "background-default": $greyscale-900,
   "background-hover": $greyscale-800,
   "background-neutral-regular-default": $greyscale-700,
@@ -12,19 +12,19 @@ $bleu-iceberg-dark: (
   "background-neutral-navigation-hover": $greyscale-100,
   "background-disabled": $greyscale-800,
   "background-inverse": $core-white,
-  "background-brand-default": $bleu-iceberg-300,
-  "background-brand-hover": $bleu-iceberg-200,
-  "background-brand-pressed": $bleu-iceberg-100,
-  "background-brand-selected-default": $bleu-iceberg-300,
-  "background-brand-selected-hover": $bleu-iceberg-200,
-  "background-brand-unselected-default": $bleu-iceberg-700,
-  "background-brand-unselected-hover": $bleu-iceberg-600,
+  "background-brand-default": $vert-foret-300,
+  "background-brand-hover": $vert-foret-200,
+  "background-brand-pressed": $vert-foret-100,
+  "background-brand-selected-default": $vert-foret-300,
+  "background-brand-selected-hover": $vert-foret-200,
+  "background-brand-unselected-default": $vert-foret-700,
+  "background-brand-unselected-hover": $vert-foret-600,
   "background-brand-inverse-default": $greyscale-900,
-  "background-brand-inverse-hover": $bleu-iceberg-700,
-  "background-brand-inverse-pressed": $bleu-iceberg-600,
-  "background-brand-navigation-default": $bleu-iceberg-950,
-  "background-brand-navigation-hover": $bleu-iceberg-900,
-  "background-brand-navigation-pressed": $bleu-iceberg-700,
+  "background-brand-inverse-hover": $vert-foret-700,
+  "background-brand-inverse-pressed": $vert-foret-600,
+  "background-brand-navigation-default": $vert-foret-950,
+  "background-brand-navigation-hover": $vert-foret-900,
+  "background-brand-navigation-pressed": $vert-foret-700,
   "background-danger-default": $rouge-indications-500,
   "background-danger-hover": $rouge-indications-400,
   "background-danger-pressed": $rouge-indications-300,
@@ -37,10 +37,10 @@ $bleu-iceberg-dark: (
   "border-divider": $greyscale-400,
   "border-disabled": $greyscale-700,
   "border-inverse": $greyscale-900,
-  "border-brand-default": $bleu-iceberg-0,
-  "border-brand-focused": $bleu-iceberg-0,
-  "border-brand-navigation-active": $bleu-iceberg-700,
-  "border-brand-navigation-divider": $bleu-iceberg-800,
+  "border-brand-default": $vert-foret-0,
+  "border-brand-focused": $vert-foret-0,
+  "border-brand-navigation-active": $vert-foret-700,
+  "border-brand-navigation-divider": $vert-foret-800,
   "border-danger": $rouge-indications-500,
   "border-info": $bleu-digital-400,
   "border-warning": $jaune-indications-400,
@@ -50,12 +50,12 @@ $bleu-iceberg-dark: (
   "content-tertiary": $greyscale-300,
   "content-primary-inverse": $greyscale-900,
   "content-disabled": $greyscale-700,
-  "content-brand-default": $bleu-iceberg-0,
-  "content-brand-hover": $bleu-iceberg-50,
-  "content-brand-pressed": $bleu-iceberg-100,
-  "content-brand-navigation-default": $bleu-iceberg-100,
-  "content-brand-navigation-hover": $bleu-iceberg-50,
-  "content-brand-navigation-disabled": $bleu-iceberg-700,
+  "content-brand-default": $vert-foret-0,
+  "content-brand-hover": $vert-foret-50,
+  "content-brand-pressed": $vert-foret-100,
+  "content-brand-navigation-default": $vert-foret-100,
+  "content-brand-navigation-hover": $vert-foret-50,
+  "content-brand-navigation-disabled": $vert-foret-700,
   "content-link-default": $bleu-digital-500,
   "content-link-hover": $bleu-digital-400,
   "content-link-pressed": $bleu-digital-300,
@@ -70,11 +70,11 @@ $bleu-iceberg-dark: (
   "content-info-default": $bleu-digital-400,
   "content-info-hover": $bleu-digital-500,
   "content-decorative": $greyscale-900,
-  "brand-navigation-divider": $bleu-iceberg-800,
-  "brand-navigation-divider-2": $bleu-iceberg-800,
-  "brand-navigation-divider-3": $bleu-iceberg-800,
-  "brand-navigation-divider-4": $bleu-iceberg-800,
-  "chart-brand": $bleu-iceberg-500,
+  "brand-navigation-divider": $vert-foret-800,
+  "brand-navigation-divider-2": $vert-foret-800,
+  "brand-navigation-divider-3": $vert-foret-800,
+  "brand-navigation-divider-4": $vert-foret-800,
+  "chart-brand": $vert-foret-500,
   "chart-neutral": $greyscale-350,
   "chart-category-1": $bleu-iceberg-500,
   "chart-category-2": $fuschia-500,
@@ -157,11 +157,11 @@ $bleu-iceberg-dark: (
   "elevation-shadow-key": rgba(0, 0, 0, 0.28),
   "elevation-shadow-key-darker": rgba(0, 0, 0, 0.48),
   "elevation-shadow-key-brand": rgba(0, 0, 0, 0.21),
-  "brand-navigation-divider-5": $bleu-iceberg-800,
-  "brand-navigation-divider-6": $bleu-iceberg-800,
-  "brand-navigation-divider-7": $bleu-iceberg-800,
+  "brand-navigation-divider-5": $vert-foret-800,
+  "brand-navigation-divider-6": $vert-foret-800,
+  "brand-navigation-divider-7": $vert-foret-800,
   // TODO remove this color (not a real token)
-  "background-brand-hover-opacity-20": $bleu-iceberg-200-opacity-20,
+  "background-brand-hover-opacity-20": $vert-foret-200-opacity-20,
   // TODO remove this color (not a real token)
   "background-danger-hover-opacity-20": $rouge-indications-500-opacity-20,
   // TODO remove this color (not a real token)
