--- a/packages/core/design-tokens/tokens/public/themes/base/_vert-foret-light.scss
+++ b/packages/core/design-tokens/tokens/public/themes/base/_vert-foret-light.scss
@@ -1,5 +1,5 @@
-@use '../../primitives/colors' as *;
-@use '../../primitives/devColors' as *;
+@use '../../../../primitives/colors' as *;
+@use '../../../../primitives/devColors' as *;
 
 $vert-foret-light: (
   "background-default": $core-white,
