--- a/packages/core/design-tokens/tokens/public/themes/base/_violet-dark.scss
+++ b/packages/core/design-tokens/tokens/public/themes/base/_violet-dark.scss
@@ -1,74 +1,74 @@
-@use '../../primitives/colors' as *;
-@use '../../primitives/devColors' as *;
+@use '../../../../primitives/colors' as *;
+@use '../../../../primitives/devColors' as *;
 
-$violet-light: (
-  "background-default": $core-white,
-  "background-hover": $greyscale-50,
-  "background-neutral-regular-default": $greyscale-100,
-  "background-neutral-regular-hover": $greyscale-250,
-  "background-neutral-bold-default": $greyscale-600,
-  "background-neutral-bold-hover": $greyscale-750,
+$violet-dark: (
+  "background-default": $greyscale-900,
+  "background-hover": $greyscale-800,
+  "background-neutral-regular-default": $greyscale-700,
+  "background-neutral-regular-hover": $greyscale-550,
+  "background-neutral-bold-default": $greyscale-200,
+  "background-neutral-bold-hover": $greyscale-50,
   "background-neutral-navigation-default": $greyscale-50,
   "background-neutral-navigation-hover": $greyscale-100,
-  "background-disabled": $greyscale-0,
-  "background-inverse": $greyscale-900,
-  "background-brand-default": $violet-600,
-  "background-brand-hover": $violet-700,
-  "background-brand-pressed": $violet-800,
-  "background-brand-selected-default": $violet-600,
-  "background-brand-selected-hover": $violet-700,
-  "background-brand-unselected-default": $violet-100,
-  "background-brand-unselected-hover": $violet-200,
-  "background-brand-inverse-default": $core-white,
-  "background-brand-inverse-hover": $violet-50,
-  "background-brand-inverse-pressed": $violet-100,
+  "background-disabled": $greyscale-800,
+  "background-inverse": $core-white,
+  "background-brand-default": $violet-300,
+  "background-brand-hover": $violet-200,
+  "background-brand-pressed": $violet-100,
+  "background-brand-selected-default": $violet-300,
+  "background-brand-selected-hover": $violet-200,
+  "background-brand-unselected-default": $violet-700,
+  "background-brand-unselected-hover": $violet-600,
+  "background-brand-inverse-default": $greyscale-900,
+  "background-brand-inverse-hover": $violet-700,
+  "background-brand-inverse-pressed": $violet-600,
   "background-brand-navigation-default": $violet-950,
   "background-brand-navigation-hover": $violet-900,
   "background-brand-navigation-pressed": $violet-700,
-  "background-danger-default": $rouge-indications-600,
-  "background-danger-hover": $rouge-indications-700,
-  "background-danger-pressed": $rouge-indications-800,
-  "background-info-default": $bleu-digital-600,
+  "background-danger-default": $rouge-indications-500,
+  "background-danger-hover": $rouge-indications-400,
+  "background-danger-pressed": $rouge-indications-300,
+  "background-info-default": $bleu-digital-400,
   "background-warning-default": $jaune-500,
-  "background-success-default": $vert-digital-700,
-  "border-primary": $greyscale-600,
-  "border-secondary": $greyscale-400,
-  "border-tertiary": $greyscale-200,
-  "border-divider": $greyscale-200,
-  "border-disabled": $greyscale-200,
-  "border-inverse": $core-white,
-  "border-brand-default": $violet-600,
-  "border-brand-focused": $violet-900,
+  "background-success-default": $vert-digital-400,
+  "border-primary": $greyscale-400,
+  "border-secondary": $greyscale-600,
+  "border-tertiary": $greyscale-800,
+  "border-divider": $greyscale-400,
+  "border-disabled": $greyscale-700,
+  "border-inverse": $greyscale-900,
+  "border-brand-default": $violet-0,
+  "border-brand-focused": $violet-0,
   "border-brand-navigation-active": $violet-700,
   "border-brand-navigation-divider": $violet-800,
-  "border-danger": $rouge-indications-600,
-  "border-info": $bleu-digital-600,
+  "border-danger": $rouge-indications-500,
+  "border-info": $bleu-digital-400,
   "border-warning": $jaune-indications-400,
-  "border-success": $vert-digital-700,
-  "content-primary": $greyscale-900,
-  "content-secondary": $greyscale-800,
-  "content-tertiary": $greyscale-600,
-  "content-primary-inverse": $core-white,
-  "content-disabled": $greyscale-200,
-  "content-brand-default": $violet-600,
-  "content-brand-hover": $violet-700,
-  "content-brand-pressed": $violet-800,
+  "border-success": $vert-digital-400,
+  "content-primary": $core-white,
+  "content-secondary": $greyscale-100,
+  "content-tertiary": $greyscale-300,
+  "content-primary-inverse": $greyscale-900,
+  "content-disabled": $greyscale-700,
+  "content-brand-default": $violet-0,
+  "content-brand-hover": $violet-50,
+  "content-brand-pressed": $violet-100,
   "content-brand-navigation-default": $violet-100,
   "content-brand-navigation-hover": $violet-50,
   "content-brand-navigation-disabled": $violet-700,
   "content-link-default": $bleu-digital-500,
-  "content-link-hover": $bleu-digital-600,
-  "content-link-pressed": $bleu-digital-700,
-  "content-link-visited-default": $violet-600,
-  "content-link-visited-hover": $violet-700,
-  "content-link-visited-pressed": $violet-800,
-  "content-danger-default": $rouge-indications-600,
-  "content-danger-hover": $rouge-indications-700,
+  "content-link-hover": $bleu-digital-400,
+  "content-link-pressed": $bleu-digital-300,
+  "content-link-visited-default": $violet-500,
+  "content-link-visited-hover": $violet-400,
+  "content-link-visited-pressed": $violet-300,
+  "content-danger-default": $rouge-indications-500,
+  "content-danger-hover": $rouge-indications-400,
   "content-danger-inverse": $core-white,
-  "content-success-default": $vert-digital-700,
-  "content-success-hover": $vert-digital-800,
-  "content-info-default": $bleu-digital-600,
-  "content-info-hover": $bleu-digital-700,
+  "content-success-default": $vert-digital-400,
+  "content-success-hover": $vert-digital-500,
+  "content-info-default": $bleu-digital-400,
+  "content-info-hover": $bleu-digital-500,
   "content-decorative": $greyscale-900,
   "brand-navigation-divider": $violet-800,
   "brand-navigation-divider-2": $violet-800,
@@ -144,26 +144,26 @@ $violet-light: (
   "decorative-fuschia": $fuschia-200,
   "decorative-rouge-indication": $rouge-indications-100,
   "decorative-taupe": $taupe-200,
-  "elevation-surface-inner-shadow": rgba(0, 0, 0, 0.00),
-  "elevation-surface-shadow-1": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-2": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-3": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-4": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-5": rgba(255, 255, 255, 0.00),
-  "elevation-surface-shadow-6": rgba(255, 255, 255, 0.00),
-  "elevation-shadow-ambient": rgba(0, 0, 0, 0.12),
-  "elevation-shadow-ambient-darker": rgba(0, 0, 0, 0.20),
-  "elevation-shadow-ambient-brand": rgba(0, 0, 0, 0.25),
-  "elevation-shadow-key": rgba(0, 0, 0, 0.14),
-  "elevation-shadow-key-darker": rgba(0, 0, 0, 0.24),
-  "elevation-shadow-key-brand": rgba(0, 0, 0, 0.31),
+  "elevation-surface-inner-shadow": rgba(0, 0, 0, 0.20),
+  "elevation-surface-shadow-1": rgba(255, 255, 255, 0.03),
+  "elevation-surface-shadow-2": rgba(255, 255, 255, 0.05),
+  "elevation-surface-shadow-3": rgba(255, 255, 255, 0.08),
+  "elevation-surface-shadow-4": rgba(255, 255, 255, 0.10),
+  "elevation-surface-shadow-5": rgba(255, 255, 255, 0.12),
+  "elevation-surface-shadow-6": rgba(255, 255, 255, 0.14),
+  "elevation-shadow-ambient": rgba(0, 0, 0, 0.20),
+  "elevation-shadow-ambient-darker": rgba(0, 0, 0, 0.40),
+  "elevation-shadow-ambient-brand": rgba(0, 0, 0, 0.17),
+  "elevation-shadow-key": rgba(0, 0, 0, 0.28),
+  "elevation-shadow-key-darker": rgba(0, 0, 0, 0.48),
+  "elevation-shadow-key-brand": rgba(0, 0, 0, 0.21),
   "brand-navigation-divider-5": $violet-800,
   "brand-navigation-divider-6": $violet-800,
   "brand-navigation-divider-7": $violet-800,
   // TODO remove this color (not a real token)
-  "background-brand-hover-opacity-20": $violet-700-opacity-20,
+  "background-brand-hover-opacity-20": $violet-200-opacity-20,
   // TODO remove this color (not a real token)
-  "background-danger-hover-opacity-20": $rouge-indications-700-opacity-20,
+  "background-danger-hover-opacity-20": $rouge-indications-500-opacity-20,
   // TODO remove this color (not a real token)
-  "background-hover-opacity-50": $greyscale-50-opacity-50,
+  "background-hover-opacity-50": $greyscale-800-opacity-50,
 );
