feat(design-tokens): update script to generate tokens with the new architecture

--- a/packages/core/design-tokens/tokens/public/_typography.scss
+++ b/packages/core/design-tokens/tokens/public/_typography.scss
@@ -1,3 +1,5 @@
+// This file is auto-generated. Do not edit directly.
+
 @use '../../primitives/typography' as *;
 
 $heading-5xl-semibold-font-family: $font-family-nunito;
