--- a/packages/core/design-tokens/tokens/private/_shadows.scss
+++ b/packages/core/design-tokens/tokens/private/_shadows.scss
@@ -1,3 +1,5 @@
+// This file is auto-generated. Do not edit directly.
+
 $ambient-shadow-position-x: 0px;
 $ambient-shadow-position-y: 0px;
 $ambient-shadow-blur: 2px;
