--- a/packages/core/design-tokens/tokens/public/_spacing.scss
+++ b/packages/core/design-tokens/tokens/public/_spacing.scss
@@ -1,3 +1,5 @@
+// This file is auto-generated. Do not edit directly.
+
 $positive-spacing_0: 0px;
 $positive-spacing_025: 2px;
 $positive-spacing_050: 4px;
