--- a/packages/core/design-tokens/tokens/public/themes/base/_vert-foret-dark.scss
+++ b/packages/core/design-tokens/tokens/public/themes/base/_vert-foret-dark.scss
@@ -1,3 +1,5 @@
+// This file is auto-generated. Do not edit directly.
+
 @use '../../../../primitives/colors' as *;
 @use '../../../../primitives/devColors' as *;
 
