feat(breadcrumb): add support for badge size + modification in stories

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
@@ -10,9 +10,10 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
+        [badgeSize]="item()!.badgeSize!"
       />
     } @else {
       <a role="link" aria-current="page" tabindex="0" [attr.aria-label]="item()!.label" [style]="linkStyle()">
@@ -22,9 +23,10 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
+        [badgeSize]="item()!.badgeSize!"
       />
     }
   } @else {
@@ -42,9 +44,10 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
+        [badgeSize]="item()!.badgeSize!"
       />
     } @else {
       <rte-link [href]="item()!.link" [label]="item()!.label" [subtle]="true" [maxWidth]="breadcrumbItemMaxWidth()" />
@@ -52,9 +55,10 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
+        [badgeSize]="item()!.badgeSize!"
       />
     }
   }
