--- a/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumbs.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/breadcrumbs/breadcrumbs.component.html
@@ -24,8 +24,9 @@
         [count]="badgeCount()"
         [simpleBadge]="true"
         [badgeContent]="badgeContent()!"
-        [icon]="badgeIcon()"
+        [icon]="badgeIcon()!"
         [badgeType]="badgeType()!"
+        [badgeSize]="badgeSize()!"
       />
       <rte-dropdown-menu [items]="truncatedItems()?.truncated ?? []" />
     </span>
