feat(dropdown): add support for badge size + modification in stories

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
@@ -25,6 +25,7 @@
       [count]="item()?.badgeCount"
       [simpleBadge]="true"
       [icon]="item()?.badgeIcon ?? ''"
+      [badgeSize]="item()?.badgeSize!"
     ></rte-badge>
   </li>
   <div *ngIf="item()?.hasSeparator" class="dropdown-divider">
