feat(split-button): add support for badge size + modification in stories

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.html
@@ -31,8 +31,8 @@
         data-testid="Menu button"
         type="button"
         aria-haspopup="menu"
-        [rteBadgeType]="'indicator'"
-        [rteBadgeContent]="'number'"
+        [rteBadgeType]="badgeType()!"
+        [rteBadgeContent]="badgeContent()!"
         [rteBadgeCount]="badgeCount()"
         [rteDropdownTriggerActivateWithArrowDown]="true"
         [attr.data-expanded]="isOpen()"
