feat(segmented-control): add support for badge size + modification in stories

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
@@ -36,6 +36,7 @@
           [icon]="option.badgeIcon!"
           [badgeType]="option.badgeType!"
           [simpleBadge]="true"
+          [badgeSize]="option.badgeSize!"
         ></rte-badge>
       </div>
     </div>
