deploy: 690ee6e3751dc71a1105ffb9219504a2c0670da8

--- a/preview/dsr-386/angular/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
+++ b/preview/dsr-386/angular/components/breadcrumbs/breadcrumb-item/breadcrumb-item.component.html
@@ -10,10 +10,10 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
-        [badgeSize]="item()!.badgeSize"
+        [badgeSize]="item()!.badgeSize!"
       />
     } @else {
       <a role="link" aria-current="page" tabindex="0" [attr.aria-label]="item()!.label" [style]="linkStyle()">
@@ -23,10 +23,10 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
-        [badgeSize]="item()!.badgeSize"
+        [badgeSize]="item()!.badgeSize!"
       />
     }
   } @else {
@@ -44,10 +44,10 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
-        [badgeSize]="item()!.badgeSize"
+        [badgeSize]="item()!.badgeSize!"
       />
     } @else {
       <rte-link [href]="item()!.link" [label]="item()!.label" [subtle]="true" [maxWidth]="breadcrumbItemMaxWidth()" />
@@ -55,10 +55,10 @@
         *ngIf="shouldDisplayBadge()"
         [count]="item()!.badgeCount"
         [badgeContent]="item()!.badgeContent!"
-        [icon]="item()!.badgeIcon"
+        [icon]="item()!.badgeIcon!"
         [badgeType]="item()!.badgeType!"
         [simpleBadge]="true"
-        [badgeSize]="item()!.badgeSize"
+        [badgeSize]="item()!.badgeSize!"
       />
     }
   }
