--- a/preview/dsr-386/angular/components/breadcrumbs/breadcrumbs.component.html
+++ b/preview/dsr-386/angular/components/breadcrumbs/breadcrumbs.component.html
@@ -24,9 +24,9 @@
         [count]="badgeCount()"
         [simpleBadge]="true"
         [badgeContent]="badgeContent()!"
-        [icon]="badgeIcon()"
+        [icon]="badgeIcon()!"
         [badgeType]="badgeType()!"
-        [badgeSize]="badgeSize()"
+        [badgeSize]="badgeSize()!"
       />
       <rte-dropdown-menu [items]="truncatedItems()?.truncated ?? []" />
     </span>
