feat (dropdown): add complex menu to angular

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.scss
@@ -25,6 +25,18 @@
   overflow-x: hidden;
   overflow-y: auto;
 
+  &-header {
+    width: 100%;
+  }
+
+  &-content {
+    width: 100%;
+  }
+
+  &-footer {
+    width: 100%;
+  }
+
   &.open {
     opacity: 1;
   }
