refactor (text input): move AssistiveText & RequiredIndicator to base component of Text Input

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/assistive-text/assistive-text.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/assistive-text/assistive-text.component.html
@@ -1,7 +1,4 @@
-<div
-  class="rte-assistive-text {{ appearance() }}"
-  [ngStyle]="{ width: widthStyle() }"
->
+<div class="rte-assistive-text {{ appearance() }}" [ngStyle]="{ width: widthStyle() }">
   <rte-icon
     *ngIf="showIcon() && iconName()"
     class="assistive-icon-{{ appearance() }}"
@@ -9,12 +6,7 @@
     [size]="assistiveTextIconSize"
   ></rte-icon>
   @if (isLink()) {
-    <rte-link
-      class="assistive-text-link"
-      [externalLink]="true"
-      [href]="href() || ''"
-      [label]="label() || ''"
-    >
+    <rte-link class="assistive-text-link" [externalLink]="true" [href]="href() || ''" [label]="label() || ''">
     </rte-link>
   } @else {
     <span>{{ label() }}</span>
