--- a/packages/react/src/components/dropdown/Dropdown.module.scss
+++ b/packages/react/src/components/dropdown/Dropdown.module.scss
@@ -40,6 +40,17 @@
     transition: opacity 150ms ease-in-out;
   }
 
+  .dropdown-menu-header {
+    width: 100%;
+  }
+
+  .dropdown-menu-content {
+    width: 100%;
+  }
+
+  .dropdown-menu-footer {
+    width: 100%;
+  }
 
   .dropdown-items {
     width: 100%;
