refactor (dropdown): unify dropdown-menu css selectors with same instructions

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.scss
@@ -25,14 +25,8 @@
   overflow-x: hidden;
   overflow-y: auto;
 
-  &-header {
-    width: 100%;
-  }
-
-  &-content {
-    width: 100%;
-  }
-
+  &-header,
+  &-content,
   &-footer {
     width: 100%;
   }
