--- a/packages/react/src/components/dropdown/Dropdown.module.scss
+++ b/packages/react/src/components/dropdown/Dropdown.module.scss
@@ -40,15 +40,9 @@
     transition: opacity 150ms ease-in-out;
   }
 
-  .dropdown-menu-header {
-    width: 100%;
-  }
-
-  .dropdown-menu-content {
-    width: 100%;
-  }
-
-  .dropdown-menu-footer {
+  &-menu-header,
+  &-menu-content,
+  &-menu-footer {
     width: 100%;
   }
 
