fix(loader): export loader component

--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -162,5 +162,6 @@
       <rte-divider />
       <rte-select label="Select an option" [options]="selectOptions" [showResetButton]="true" />
     </div>
+    <rte-loader [size]="'medium'" />
   </div>
 </rte-side-nav>
