--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.html
@@ -14,7 +14,7 @@
   <div class="rte-dropdown-menu-content">
     <ul class="rte-dropdown-items" role="menu" [attr.aria-activedescendant]="menuId()">
       @for (item of items(); track item.label; let i = $index) {
-        <rte-dropdown-item [item]="item" (itemEvent)="handleItemEvent($event)" />
+        <rte-dropdown-item [item]="item" [menuId]="menuId()" (itemEvent)="handleItemEvent($event)" />
       }
     </ul>
   </div>
