--- a/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.html
@@ -1,7 +1,11 @@
 <div *ngIf="isValidOptions()" class="rte-segmented-control" role="radiogroup" [attr.aria-label]="ariaLabel()">
   <span class="rte-segment-selected-indicator" [ngStyle]="segmentSelectedIndicatorStyle()"></span>
   <ng-container *ngFor="let option of options(); let idx = index">
-    <div class="rte-segment-container" [attr.data-position]="getSegmentPosition(idx)">
+    <div
+      class="rte-segment-container"
+      [attr.data-position]="getSegmentPosition(idx)"
+      [attr.data-appearance]="appearance()"
+    >
       <div
         #segment
         role="radio"
