--- a/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/segmented-control/segmented-control.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   min-width: 168px;
   max-width: 720px;
-  height: 48px;
+  height: 40px;
 
   &[data-number-of-segments="3"] {
     min-width: 256px;
@@ -14,7 +14,7 @@
 .rte-segment-selected-indicator {
   position: absolute;
   top: 4px;
-  height: 40px;
+  height: 32px;
   background: var(--background-default);
   border-radius: $radius-pill;
   transition: left 0.2s ease-out, width 0.2s ease-out;
@@ -29,26 +29,62 @@
   align-items: center;
   flex: 1 0 0;
   overflow: hidden;
+  min-height: 28px;
+
+  &[data-appearance="neutral"] {
+    border-top: $width-xs solid var(--border-tertiary);
+    border-bottom: $width-xs solid var(--border-tertiary);
+    background: var(--background-neutral-regular-default);
+
+    &[data-position="left"] {
+      border-radius: $radius-pill $radius-none $radius-none $radius-pill;
+      border-left: $width-xs solid var(--border-tertiary);
+      padding-left: $positive-spacing_050;
+    }
+
+    &[data-position="right"] {
+      border-radius: $radius-none $radius-pill $radius-pill $radius-none;
+      border-right: $width-xs solid var(--border-tertiary);
+      padding-right: $positive-spacing_050;
+    }
+
+    .rte-segment-label {
+      color: var(--content-secondary);
+    }
+
+    .rte-segment {
+      color: var(--content-secondary);
+
+      &.selected {
+        color: var(--content-primary);
+      }
+
+      &:hover {
+        &:not(.selected) {
+          background: var(--background-neutral-regular-hover);
+          cursor: pointer;
+        }
+      }
+    }
+  }
 
 
   &[data-position="left"] {
     border-radius: $radius-pill $radius-none $radius-none $radius-pill;
     border-left: $width-xs solid var(--border-inverse);
-    background: var(--background-brand-default);
     padding-left: $positive-spacing_050;
   }
 
   &[data-position="right"] {
     border-radius: $radius-none $radius-pill $radius-pill $radius-none;
     border-right: $width-xs solid var(--border-inverse);
-    background: var(--background-brand-default);
     padding-right: $positive-spacing_050;
   }
 }
 
 .rte-segment {
   display: flex;
-  padding: $positive-spacing_075 $positive-spacing_100;
+  padding: $positive-spacing_025 $positive-spacing_100;
   align-items: center;
   border-radius: $radius-pill ;
   color: var(--content-primary-inverse);
@@ -79,7 +115,7 @@
   }
 
   &[data-segment-type="icon"] {
-    padding: $positive-spacing_100;
+    padding: $positive-spacing_050;
   }
 
   .rte-segment-content {
